quick and dirty fix for tablecell pasting issue

https://bugs.webkit.org/show_bug.cgi?id=53933
This is probably not the best fix, I need to look deeper to see if we can do
something better before we contribute upstream. However, it works in the sense
that it pastes the text into the cell where the cursor was, instead of creating
an extra dummy cell